# manufacturing-process-copilot

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  create_05_notebook.py  create_nb06.py  docker-compose.yml  fix_notebook.py  rebuild_nb05.py  requirements-lock.txt  update_notebook.py
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_factory_entities.py  002_ml_tables.py  003_llm_agent_tables.py
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: chat.py  health.py  models.py  orders.py  predictions.py  workflows.py
backend/app/core/: config.py  logging.py
backend/app/db/: _declarative.py  base.py  session.py
backend/app/schemas/: chat.py  orders.py  predictions.py  recommendations.py
backend/scripts/: eval_copilot.py  fix_mlruns_paths.py  seed_db.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_agent.py  test_db_models.py  test_llm_client.py  test_ml_service.py
ml/: pyproject.toml
ml/data/processed/: test.csv  test.csv.bak  train.csv  train.csv.bak  val.csv  val.csv.bak
ml/data/raw/: simulation_report.json  simulation_report.json.bak  synthetic_factory_data.csv  synthetic_factory_data.csv.bak
ml/notebooks/: 01_eda.ipynb  02_baseline.ipynb  03_task_specific_modeling.ipynb  04_tuning.ipynb  05_feature_engineering.ipynb  06_shap_analysis.ipynb
ml/scripts/: generate_synthetic_data.py
ml/tests/: conftest.py  test_evaluation.py  test_mlflow_utils.py  test_pipeline.py  test_transformers.py
(+64 files in other folders)
